--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
       <module>product-view-service-ribbon</module>
       <module>Product-data-service2</module>
     <module>product-view-service-feign</module>
+      <module>config-server</module>
   </modules>
   <packaging>pom</packaging>
   <name>SpringCloudDemo</name>
